# life-agent

./: .gitignore  go.mod  go.sum
cmd/: top-topic.go
pkg/http2/: client.go  jqfunctions.go  jqrun.go  jqrun_test.go
pylifeagent/: .env.example  database.py  main.py  pyproject.toml  utils.py
pylifeagent/camping/: geo.py  models.py  regions.py  router.py  search.py
